[metadata]
name = chibaca
author = Arturo Rodriguez
author_email = da.rodriguezh@uniandes.edu.co
version = attr: chibaca.__version__
description = A WIP translator
long_description_content_type = text/markdown
long_description =  file: README.md
url = https://github.com/ZibraMax/chibaca
package_dir =
    = src
[options]
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    tqdm
[options.extras_require]
docs = 
    sphinx
    m2r2
    docutils==0.18.1
    furo
test =
    pytest
    pytest-emoji